--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <h1 style="text-align: center;">Clue</h1>
 
         <div id="pawn-container">
-            <div id="Miss Scarlet" class="pawn" style="background-color: maroon"></div>
-            <div id="Professor Plum" class="pawn" style="background-color: purple"></div>
-            <div id="Mrs. Peacock" class="pawn" style="background-color: darkblue"></div>
-            <div id="Mr. Green" class="pawn" style="background-color: green"></div>
-            <div id="Colonel Mustard" class="pawn" style="background-color: darkgoldenrod"></div>
-            <div id="Mrs. White" class="pawn" style="background-color: white"></div>
+            <div id="Miss Scarlet" class="pawn" style="background-color: #970000"></div>
+            <div id="Professor Plum" class="pawn" style="background-color: #610061"></div>
+            <div id="Mrs. Peacock" class="pawn" style="background-color: #082e96"></div>
+            <div id="Mr. Green" class="pawn" style="background-color: #1c961c"></div>
+            <div id="Colonel Mustard" class="pawn" style="background-color: #dd9803"></div>
+            <div id="Mrs. White" class="pawn" style="background-color: #e6e6e6"></div>
         </div>
 
         <div id="player-select-container">
@@ -35,8 +35,11 @@
 
         <h2 id="current-turn-header"></h2>
 
+        <div id="game-pawn-container"></div>
+
         <div id="game-board-container">
-            <div id="guess-hud" style="display: none;">
+
+            <div id="guess-hud">
                 <h3 id="room-label" class="guess-label">Room: ???</h3>
                 <h3 id="suspect-label" class="guess-label">Suspect: ???</h3>
                 <h3 id="weapon-label" class="guess-label">Weapon: ???</h3>
@@ -61,8 +64,8 @@
                         <div class="weapon-btn">Wrench</div>
                     </div>
                 </div>
-
             </div>
+
             <img src="assets/clue_board.png" alt="Clue Board" id="board-img" draggable="false">
 
             <div class="room" id="hall"></div>
@@ -74,6 +77,14 @@
             <div class="room" id="billiard-room"></div>
             <div class="room" id="library"></div>
             <div class="room" id="study"></div>
+        </div>
+
+        <div id="revealed-card-box">
+            <div id="revealed-card-wrapper">
+                <div id="revealed-card-pawn"></div>
+                <h2 id="revealed-card-text"></h2>
+            </div>
+            <h3 id="revealed-card-click-text">Click anywhere to continue</h3>
         </div>
 
         <div id="player-hand"></div>
