--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h2 id="envelope-header">You accused:</h2>
                 <h3 id="player-accusation-text"></h3>
                 <div id="envelope-container">
-                    <img id="envelope" src="/assets/envelope_img.png" draggable=false></img>
+                    <img id="envelope" src="assets/envelope_img.png" draggable=false></img>
                     <h3 id="envelope-click-text">Click to open the envelope!</h3>
                 </div>
             </div>
